added social media links

--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
           <div class="container">
             <img class="site-footer-logo img-responsive" src="imgs/site-footer-logo.png" data-sr="bottom">
             <ul class="site-footer-social-list">
-              <li><i class="fa fa-google-plus" style="color:#d34836;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="#" target="_blank">  Google Plus</a></li>
-              <li><i class="fa fa-linkedin" style="color:#007bb7;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="#" target="_blank">  LinkedIn</a></li>
-              <li><i class="fa fa-github" style="color:#000;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="#" target="_blank">  Github</a></li>
-              <li><i class="fa fa-codepen" style="color:#7a7a7a;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="#" target="_blank">  CodePen</a></li>
+              <li><i class="fa fa-google-plus" style="color:#d34836;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://plus.google.com/u/0/104651637242604464340/about" target="_blank">  Google Plus</a></li>
+              <li><i class="fa fa-linkedin" style="color:#007bb7;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://www.linkedin.com/profile/view?id=387875660&trk=hp-identity-name" target="_blank">  LinkedIn</a></li>
+              <li><i class="fa fa-github" style="color:#000;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://github.com/pineladsn" target="_blank">  Github</a></li>
+              <li><i class="fa fa-codepen" style="color:#7a7a7a;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="http://codepen.io/pineladsn/" target="_blank">  CodePen</a></li>
             </ul>
             <p class="site-footer-copyright">
               <i class="fa fa-code" aria-hidden="true"></i> feito com <i class="fa fa-coffee" aria-hidden="true"></i> e <i class="fa fa-heart" aria-hidden="true"></i>
