--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'>
-  <link rel='stylesheet' href='css/vendor.css'>
   <link rel='stylesheet' href='css/style.css'>
 </head>
 
@@ -65,7 +64,9 @@
                 <div class="col-sm-6">
                   <div class="col-inner" data-sr="left">
                     <div class="section-heading">
-                      <h3 class="text-center">Sua presença profissional na web é muito importante nos dias atuais. Criação de sites, portfolio, blogs, banner de anúncios, otimização para mecanismos de busca (SEO). São muitas possibilidades.</p>
+                      <h3 class="text-center">Trabalho como desenvolvedor front end a aproximadamente 3 anos e
+                      busco sempre focar em desenvolver aplicações que sejam bonitas que ofereçam uma experiência
+                      agradável ao usuário primando por um código limpo e bem estruturado. </p>
                     </div>
                     <div class="section-content">
                       <a class="btn btn-danger m-y-5" href="#perfil">Saiba mais sobre mim</a>
@@ -120,15 +121,16 @@
                       <h2>Especialidades</h2>
                       <li>HTML5</li>
                       <li>CSS3</li>
-                      <li>JavaS</li>
                       <li>Javascript</li>
                       <li>Bootstrap</li>
                       <li>Less</li>
                       <li>Jquery</li>
+                      <li>Gulp</li>
                       <li>Angular</li>
                       <li>Design Responsivo</li>
                       <li>UX</li>
                       <li>Usabilidade</li>
+                      <li>Desenvolvimento de apps hibrídos utilizando os frameworks PhoneGap, Ionic e Cordova</li>
                     </div>
                     <div class="section-content">
                       <a class="btn btn-success m-y-5" href="#portfolio">Conheça meus trabalhos</a>
@@ -155,7 +157,6 @@
                       <li>Social Media</li>
                       <li>PostgreSQL</li>
                       <li>.NET</li>
-                      <li>Desenvolvimento de apps hibrídos utilizando os frameworks PhoneGap, Ionic e Cordova</li>
                       <li>Desenvolvimento Android Nativo</li>
                     </div>
                     <div class="section-content">
@@ -195,6 +196,14 @@
                         <div class="col-xs-12 col-sm-4">
                           <a href="http://www.espichou.com.br/" target="_blank"><img class="img-responsive" src="imgs/job3.png" alt=""></a>
                           <p style="margin-top:20px;"><strong>Espichou - Loja de artigos infantis</strong></p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-xs-12 col-sm-4">
+                          <a href="#"><img class="img-responsive mobile-img" src="imgs/job4.png" alt=""></a>
+                          <p style="margin-top:20px;"><strong>Checkbeer - App híbrido construído com ionic</strong></p>
+                        </div>
+
                         </div>
                       </div>
                     </div>
@@ -299,10 +308,10 @@
           <div class="container">
             <img class="site-footer-logo img-responsive" src="imgs/site-footer-logo.png" data-sr="bottom">
             <ul class="site-footer-social-list">
-              <li><i class="fa fa-google-plus" style="color:#d34836;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://plus.google.com/u/0/104651637242604464340/about" target="_blank">  Google Plus</a></li>
-              <li><i class="fa fa-linkedin" style="color:#007bb7;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://www.linkedin.com/profile/view?id=387875660&trk=hp-identity-name" target="_blank">  LinkedIn</a></li>
-              <li><i class="fa fa-github" style="color:#000;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://github.com/pineladsn" target="_blank">  Github</a></li>
-              <li><i class="fa fa-codepen" style="color:#7a7a7a;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="http://codepen.io/pineladsn/" target="_blank">  CodePen</a></li>
+              <li><i class="fa fa-google-plus" style="color:#d34836;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://plus.google.com/u/0/104651637242604464340/about" target="_blank" class="media-fontcolor">  Google Plus</a></li>
+              <li><i class="fa fa-linkedin" style="color:#007bb7;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://www.linkedin.com/profile/view?id=387875660&trk=hp-identity-name" target="_blank" class="media-fontcolor">  LinkedIn</a></li>
+              <li><i class="fa fa-github" style="color:#000;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://github.com/pineladsn" target="_blank" class="media-fontcolor">  Github</a></li>
+              <li><i class="fa fa-codepen" style="color:#7a7a7a;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="http://codepen.io/pineladsn/" target="_blank" class="media-fontcolor">  CodePen</a></li>
             </ul>
             <p class="site-footer-copyright">
               <i class="fa fa-code" aria-hidden="true"></i> feito com <i class="fa fa-coffee" aria-hidden="true"></i> e <i class="fa fa-heart" aria-hidden="true"></i>
@@ -315,7 +324,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
     <script src='js/plugin.js'></script>
-    <script src='js/variable.js'></script>
     <script src='js/main.js'></script>
   </body>
 
