adjusted some text

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                   <div class="col-inner" data-sr="left">
                     <div class="section-heading">
                       <h3 class="text-center">Trabalho como desenvolvedor front end a aproximadamente 3 anos e
-                      busco sempre desenvolver aplicações que sejam bonitas e que ofereçam uma experiência
-                      agradável ao usuário. Primando por um código limpo e bem estruturado. </p>
+                      busco sempre desenvolver aplicações que tenham um design moderno e que ofereçam uma
+                      experiência agradável ao usuário. Primando por um código limpo e bem estruturado. </p>
                     </div>
                     <div class="section-content">
                       <a class="btn btn-danger m-y-5" href="#perfil">Saiba mais sobre mim</a>
