Added more competencies

--- a/index.html
+++ b/index.html
@@ -149,15 +149,16 @@
                   <div class="col-inner">
                     <div class="section-heading">
                       <h2>Conhecimentos em...</h2>
-                      <li>React</li>
-                      <li>Wordpress</li>
                       <li>PHP</li>
-                      <li>MySQL</li>
-                      <li>SEO</li>
-                      <li>Social Media</li>
-                      <li>PostgreSQL</li>
                       <li>.NET</li>
+                      <li>React</li>
+                      <li>Node</li>
+                      <li>Mongodb</li>
+                      <li>PostgreSQL</li>
+                      <li>MySQL</li>
+                      <li>Wordpress</li>
                       <li>Desenvolvimento Android Nativo</li>
+                      <li>SEO</li>
                     </div>
                     <div class="section-content">
                       <a class="btn btn-primary m-y-5" href="#portfolio">Conheça meus trabalhos</a>
