--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-sm-6 m-t-60-xs-max p-l-60-md-min">
                   <div class="col-inner clearfix">
-                    <img class="img-responsive float-r-sm-min m-x-auto-xs-max" style="border-radius:40px;" src="imgs/profile.png" alt="" data-sr="right">
+                    <img class="img-responsive float-r-sm-min m-x-auto-xs-max" style="border-radius:40px;" src="imgs/profile.jpg" alt="" data-sr="right">
                   </div>
                 </div>
               </div>
@@ -122,8 +122,8 @@
                       <li>HTML5</li>
                       <li>CSS3</li>
                       <li>Javascript</li>
-                      <li>Bootstrap</li>
-                      <li>Less</li>
+                      <li>Bootstrap/Foundation</li>
+                      <li>Less/Sass</li>
                       <li>Jquery</li>
                       <li>Gulp</li>
                       <li>Angular</li>
@@ -187,24 +187,22 @@
                     <div class="section-content m-t-60-sm-min">
                       <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                          <a href="http://www.voxetelecom.com.br" target="_blank"><img class="img-responsive" src="imgs/job1.png" alt=""></a>
-                          <p style="margin-top:20px;"><strong>VoxeTelecom - Equipe de telefonia</strong></p>
+                          <a href="http://www.cantisanoadm.com.br/" target="_blank">
+                            <img class="img-responsive job-image" src="imgs/cantisano.png" alt="">
+                          </a>
+                          <p style="margin-top:20px;"><strong>Administradora e Imobiliária Cantisano</strong></p>
                         </div>
                         <div class="col-xs-12 col-sm-4">
-                          <a href="http://protegeprontaresposta.com.br/" target="_blank"><img class="img-responsive" src="imgs/job2.png" alt=""></a>
-                          <p style="margin-top:20px;"><strong>Protege Pronta Resposta e Reboque 24h</strong></p>
+                          <a href="http://csimobiliaria.com.br/" target="_blank">
+                            <img class="img-responsive job-image" src="imgs/cs.png" alt="">
+                          </a>
+                          <p style="margin-top:20px;"><strong>CS Imobiliária</strong></p>
                         </div>
                         <div class="col-xs-12 col-sm-4">
-                          <a href="http://www.espichou.com.br/" target="_blank"><img class="img-responsive" src="imgs/job3.png" alt=""></a>
-                          <p style="margin-top:20px;"><strong>Espichou - Loja de artigos infantis</strong></p>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-xs-12 col-sm-4">
-                          <a href="#"><img class="img-responsive mobile-img" src="imgs/job4.png" alt=""></a>
+                          <a href="https://play.google.com/store/apps/details?id=com.checkbeer.app&hl=pt_BR" target="_blank">
+                            <img class="img-responsive job-image" src="imgs/checkbeer.png" alt="">
+                          </a>
                           <p style="margin-top:20px;"><strong>Checkbeer - App híbrido construído com ionic</strong></p>
-                        </div>
-
                         </div>
                       </div>
                     </div>
@@ -213,6 +211,7 @@
               </div>
             </div>
           </div>
+        </div>
 
           <div class="section block-primary align-c">
             <div class="container">
@@ -273,7 +272,7 @@
                         <h4>Resido em</h4>
                       </div>
                       <div class="icon-box-content font-sub font-italic">
-                        <span>Teresópolis - RJ</span>
+                        <span>Curitiba - PR</span>
                       </div>
                     </div>
                   </div>
