--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
           <div id="contato" class="section block-default">
             <div class="container">
               <div class="section-heading text-center">
-                <h2>Faço trabalhos como freelancer</h2>
-                <p>Ficou interessado no meu trabalho? Entre em contato comigo.</p>
+                <p>Entre em contato comigo.</p>
               </div>
               <div class="row section-content m-t-60-sm-min">
                 <div class="col-sm-6 col-md-5">
