--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div id="contato" class="section block-default">
             <div class="container">
               <div class="section-heading text-center">
-                <p>Entre em contato comigo.</p>
+                <h2>Entre em contato comigo.</h2>
               </div>
               <div class="row section-content m-t-60-sm-min">
                 <div class="col-sm-6 col-md-5">
