--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bruno Pinela - Front End</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="author" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-  <link rel="apple-touch-icon" href="imgs/favicon.png">
-  <link rel="icon" href="imgs/favicon.png">
-
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'>
-  <link rel='stylesheet' href='css/style.css'>
-</head>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bruno Pinela - Front End</title>
+    <meta name="description" content="Front end portfolio">
+    <meta name="keywords" content="frontend,portfolio,frontend developer">
+    <meta name="author" content="Bruno Pinela">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="apple-touch-icon" href="imgs/favicon.png">
+    <link rel="icon" href="imgs/favicon.png">
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='css/style.css'>
+  </head>
   <body>
     <div class="site">
       <div class="site-loader">
         <div class="site-loader-spinner"></div>
       </div>
-
       <div class="site-canvas">
         <header class="site-header">
           <nav class="navbar navbar-theme">
             <div class="container">
               <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
+                <button type="button" class="navbar-toggle collapsed"
+                  data-toggle="collapse" data-target="#navbar-collapse"
+                  aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
                 </button>
                 <div class="navbar-brand-wrap">
                   <a class="navbar-brand" href="#home">
-                    <img src="imgs/site-header-logo.png" alt="">
+                  <img src="imgs/site-header-logo.png" alt="Logo">
                   </a>
                 </div>
               </div>
-
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="#home">Home</a></li>
@@ -54,29 +51,36 @@
             </div>
           </nav>
         </header>
+
         <main class="site-main">
           <div id="home" class="section block-primary position-r align-c-xs-max">
-            <div class="site-bg">
-            </div>
-
+            <div class="site-bg"> </div>
             <div class="container">
               <div class="row row-table">
                 <div class="col-sm-6">
                   <div class="col-inner" data-sr="left">
                     <div class="section-heading">
-                      <h3 class="text-center">Trabalho como desenvolvedor front end a aproximadamente 3 anos e
-                      busco sempre desenvolver aplicações que tenham um design moderno e que ofereçam uma
-                      experiência agradável ao usuário. Primando por um código limpo e bem estruturado. </p>
+                      <h3 class="text-center">
+                        Trabalho como desenvolvedor front end a mais de 3 anos e
+                        busco sempre desenvolver aplicações que tenham um design
+                        moderno e que ofereçam uma experiência agradável ao
+                        usuário. Primando por um código limpo e bem estruturado.
+                      </h3>
                     </div>
                     <div class="section-content">
-                      <a class="btn btn-danger m-y-5" href="#perfil">Saiba mais sobre mim</a>
-                      <a class="btn btn-warning m-y-5" href="#portfolio">Conheça meu trabalho</a>
+                      <a class="btn btn-danger" href="#perfil">
+                      Saiba mais sobre mim
+                      </a>
+                      <a class="btn btn-warning" href="#portfolio">
+                      Conheça meu trabalho
+                      </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 col-md-p-l-1 m-t-60-xs-max">
                   <div class="col-inner clearfix">
-                    <img class="img-responsive float-r-sm-min m-x-auto-xs-max" src="imgs/home.png" alt="" data-sr="right">
+                    <img class="img-responsive pull-right m-x-auto-xs-max"
+                      src="imgs/home.png" alt="" data-sr="right">
                   </div>
                 </div>
               </div>
@@ -89,18 +93,33 @@
                 <div class="col-sm-6">
                   <div class="col-inner">
                     <div class="section-heading">
-                      <h2 class="text-center">Bruno Pinela - Desenvolvedor front end</h2>
-                      <p class="text-center">Me chamo Bruno Pinela e tenho 25 anos. Sou graduado como Bacharel em Ciência da Computação pela UNIFESO em Teresópolis - RJ. Desenvolvo soluções criativas e funcionais para o seu site, blog ou aplicação web. Trabalho atendendo empresas, agências digitais, startups e designers, que desejam dar vida às suas criações e ideias.</p>
+                      <h2 class="text-center">
+                        Bruno Pinela - Desenvolvedor front end
+                      </h2>
+                      <p class="text-center">
+                        Me chamo Bruno Pinela e tenho 25 anos. Sou graduado como
+                        Bacharel em Ciência da Computação pela UNIFESO em
+                        Teresópolis - RJ. Desenvolvo soluções criativas e funcionais
+                        para o seu site, blog ou aplicação web.Trabalho atendendo
+                        empresas, agências digitais, startups e designers, que
+                        desejam dar vida às suas criações e ideias.
+                      </p>
                     </div>
                     <div class="section-content">
-                      <a class="btn btn-primary m-y-5" href="#skills">Minhas especialidades</a>
-                      <a class="btn btn-invert m-y-5" href="#knowledge">Meus conhecimentos</a>
+                      <a class="btn btn-primary" href="#skills">
+                      Minhas especialidades
+                      </a>
+                      <a class="btn btn-invert" href="#knowledge">
+                      Meus conhecimentos
+                      </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 m-t-60-xs-max p-l-60-md-min">
                   <div class="col-inner clearfix">
-                    <img class="img-responsive float-r-sm-min m-x-auto-xs-max" style="border-radius:40px;" src="imgs/profile.jpg" alt="" data-sr="right">
+                    <img class="img-responsive pull-right m-x-auto-xs-max"
+                      style="border-radius:40px;" src="imgs/profile.jpg" alt=""
+                      data-sr="right">
                   </div>
                 </div>
               </div>
@@ -112,7 +131,8 @@
               <div class="row row-table">
                 <div class="col-sm-6 m-b-60-xs-max p-r-60-md-min">
                   <div class="col-inner clearfix">
-                    <img class="img-responsive float-l-sm-min m-x-auto-xs-max" src="imgs/brief-1.png" alt="" data-sr="left">
+                    <img class="img-responsive pull-left m-x-auto-xs-max"
+                      src="imgs/brief-1.png" alt="" data-sr="left">
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -133,8 +153,12 @@
                       <li>Desenvolvimento de apps hibrídos utilizando os frameworks PhoneGap, Ionic e Cordova</li>
                     </div>
                     <div class="section-content">
-                      <a class="btn btn-success m-y-5" href="#portfolio">Conheça meus trabalhos</a>
-                      <a class="btn btn-warning m-y-5" href="#contato">Entre em contato</a>
+                      <a class="btn btn-success" href="#portfolio">
+                      Conheça meus trabalhos
+                      </a>
+                      <a class="btn btn-warning" href="#contato">
+                      Entre em contato
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -161,14 +185,19 @@
                       <li>SEO</li>
                     </div>
                     <div class="section-content">
-                      <a class="btn btn-primary m-y-5" href="#portfolio">Conheça meus trabalhos</a>
-                      <a class="btn btn-invert m-y-5" href="#contato">Entre em contato</a>
+                      <a class="btn btn-primary" href="#portfolio">
+                      Conheça meus trabalhos
+                      </a>
+                      <a class="btn btn-invert" href="#contato">
+                      Entre em contato
+                      </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-6 m-t-60-xs-max p-l-60-md-min">
                   <div class="col-inner clearfix">
-                    <img class="img-responsive float-r-sm-min m-x-auto-xs-max" src="imgs/brief-2.png" alt="" data-sr="right">
+                    <img class="img-responsive pull-right m-x-auto-xs-max"
+                      src="imgs/brief-2.png" alt="" data-sr="right">
                   </div>
                 </div>
               </div>
@@ -186,23 +215,32 @@
                     </div>
                     <div class="section-content m-t-60-sm-min">
                       <div class="row">
-                        <div class="col-xs-12 col-sm-4">
+                        <div class="col-xs-12 col-sm-3">
                           <a href="http://www.cantisanoadm.com.br/" target="_blank">
-                            <img class="img-responsive job-image" src="imgs/cantisano.png" alt="">
+                          <img class="img-responsive job-image" src="imgs/job1.png" alt="">
                           </a>
                           <p style="margin-top:20px;"><strong>Administradora e Imobiliária Cantisano</strong></p>
                         </div>
-                        <div class="col-xs-12 col-sm-4">
+
+                        <div class="col-xs-12 col-sm-3">
                           <a href="http://csimobiliaria.com.br/" target="_blank">
-                            <img class="img-responsive job-image" src="imgs/cs.png" alt="">
+                          <img class="img-responsive job-image" src="imgs/job2.png" alt="">
                           </a>
                           <p style="margin-top:20px;"><strong>CS Imobiliária</strong></p>
                         </div>
-                        <div class="col-xs-12 col-sm-4">
-                          <a href="https://play.google.com/store/apps/details?id=com.checkbeer.app&hl=pt_BR" target="_blank">
-                            <img class="img-responsive job-image" src="imgs/checkbeer.png" alt="">
+
+                        <div class="col-xs-12 col-sm-3">
+                          <a href="http://www.espichou.com.br/" target="_blank">
+                          <img class="img-responsive job-image" src="imgs/job3.png" alt="">
                           </a>
-                          <p style="margin-top:20px;"><strong>Checkbeer - App híbrido construído com ionic</strong></p>
+                          <p style="margin-top:20px;"><strong>Espichou - Loja de artigos infantis</strong></p>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-3">
+                          <a href="https://play.google.com/store/apps/details?id=com.checkbeer.app&hl=pt_BR" target="_blank">
+                          <img class="img-responsive job-image" src="imgs/job4.png" style="max-width: 96px;" alt="">
+                          </a>
+                          <p style="margin-top:20px;"><strong>CheckBeer - App híbrido feito com ionic</strong></p>
                         </div>
                       </div>
                     </div>
@@ -211,7 +249,6 @@
               </div>
             </div>
           </div>
-        </div>
 
           <div class="section block-primary align-c">
             <div class="container">
@@ -219,11 +256,15 @@
                 <div class="col-xs-12">
                   <div class="col-inner">
                     <div class="section-heading">
-                      <h2>Gostou do que viu?</h2>
-                      <p>Entre em contato comigo para discutirmos sobre o SEU projeto! </p>
+                      <h2>
+                        Gostou do que viu?
+                      </h2>
+                      <p>
+                        Entre em contato comigo para discutirmos sobre o SEU projeto!
+                      </p>
                     </div>
                     <div class="section-content">
-                      <a href="#contato" class="btn btn-warning m-y-5">Entre em contato</a>
+                      <a href="#contato" class="btn btn-warning">Entre em contato</a>
                     </div>
                   </div>
                 </div>
@@ -234,7 +275,8 @@
           <div id="contato" class="section block-default">
             <div class="container">
               <div class="section-heading text-center">
-                <h2>Entre em contato comigo.</h2>
+                <h2>Contato</h2>
+                <p>Preencha o formulário e entre em contato comigo agora mesmo.</p>
               </div>
               <div class="row section-content m-t-60-sm-min">
                 <div class="col-sm-6 col-md-5">
@@ -250,7 +292,6 @@
                         <span>(021) 99330-0221</span>
                       </div>
                     </div>
-
                     <div class="icon-box _left">
                       <div class="icon-box-media">
                         <img src="imgs/mail.png" alt="" data-sr="bottom">
@@ -262,7 +303,6 @@
                         <span>bruno.pinelamarques@gmail.com</span>
                       </div>
                     </div>
-
                     <div class="icon-box _left">
                       <div class="icon-box-media">
                         <img src="imgs/pin.png" alt="" data-sr="bottom">
@@ -301,19 +341,43 @@
               </div>
             </div>
           </div>
+
           <div id="map-canvas"></div>
         </main>
+
         <footer class="site-footer block-invert">
           <div class="container">
             <img class="site-footer-logo img-responsive" src="imgs/site-footer-logo.png" data-sr="bottom">
             <ul class="site-footer-social-list">
-              <li><i class="fa fa-google-plus" style="color:#d34836;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://plus.google.com/u/0/104651637242604464340/about" target="_blank" class="media-fontcolor">  Google Plus</a></li>
-              <li><i class="fa fa-linkedin" style="color:#007bb7;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://www.linkedin.com/profile/view?id=387875660&trk=hp-identity-name" target="_blank" class="media-fontcolor">  LinkedIn</a></li>
-              <li><i class="fa fa-github" style="color:#000;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="https://github.com/pineladsn" target="_blank" class="media-fontcolor">  Github</a></li>
-              <li><i class="fa fa-codepen" style="color:#7a7a7a;font-size: 22px;margin-right:4px;" aria-hidden="true"></i><a href="http://codepen.io/pineladsn/" target="_blank" class="media-fontcolor">  CodePen</a></li>
+              <li>
+                <i class="fa fa-google-plus" style="color:#d34836;font-size: 22px;margin-right:4px;" aria-hidden="true"></i>
+                <a href="https://plus.google.com/u/0/104651637242604464340/about" target="_blank" class="media-fontcolor">
+                  Google Plus
+                </a>
+              </li>
+              <li>
+                <i class="fa fa-linkedin" style="color:#007bb7;font-size: 22px;margin-right:4px;" aria-hidden="true"></i>
+                <a href="https://www.linkedin.com/in/bruno-pinela-0b8a95a9/" target="_blank" class="media-fontcolor">
+                  LinkedIn
+                </a>
+              </li>
+              <li>
+                <i class="fa fa-github" style="color:#000;font-size: 22px;margin-right:4px;" aria-hidden="true"></i>
+                <a href="https://github.com/pineladsn" target="_blank" class="media-fontcolor">
+                  Github
+                </a>
+              </li>
+              <li>
+                <i class="fa fa-codepen" style="color:#7a7a7a;font-size: 22px;margin-right:4px;" aria-hidden="true"></i>
+                <a href="http://codepen.io/pineladsn/" target="_blank" class="media-fontcolor">
+                  CodePen
+                </a>
+              </li>
             </ul>
             <p class="site-footer-copyright">
-              <i class="fa fa-code" aria-hidden="true"></i> feito com <i class="fa fa-coffee" aria-hidden="true"></i> e <i class="fa fa-heart" aria-hidden="true"></i>
+              <i class="fa fa-code" aria-hidden="true"></i> feito com
+              <i class="fa fa-coffee" aria-hidden="true"></i> e
+              <i class="fa fa-heart" aria-hidden="true"></i>
             </p>
           </div>
         </footer>
@@ -325,5 +389,4 @@
     <script src='js/plugin.js'></script>
     <script src='js/main.js'></script>
   </body>
-
 </html>
